redux/socket.io

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Server for Playoff App",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage --watchAll"
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/PixelPlayoffs/playoff_svr#readme",
   "dependencies": {
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "redux": "^3.6.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
