--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "playoff_svr",
   "version": "0.0.1",
   "description": "Server for Playoff App",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "node index.js",
+    "dev-start": "babel-node src/index.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage --watchAll"
+    "test:coverage": "jest --coverage --watchAll",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
