--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server for Playoff App",
   "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "dev-start": "babel-node src/index.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
