--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev-start": "babel-node src/index.js",
+    "web-start": "babel-node src/WebServer.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage --watchAll",
@@ -22,8 +23,10 @@
   },
   "homepage": "https://github.com/PixelPlayoffs/playoff_svr#readme",
   "dependencies": {
+    "express": "^4.15.2",
     "immutable": "^3.8.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
