--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "immutable": "^3.8.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
